# B-SAFE

./: Anchor.toml  README.md  package.json  tsconfig.json
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  WalletProvider.tsx  index.css  main.tsx  program.ts
app/src/pages/: AdminPage.tsx  DoorsPage.tsx  HistoryPage.tsx
programs/biometric_access/: Cargo.toml
programs/biometric_access/src/: lib.rs
scripts/: biometric-access.ts  config.ts  grant-access.ts  list-doors.ts  query-logs.ts  register-door.ts  revoke-access.ts
tests/: biometric_access.js
